k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-v2
  labels:
    app: portfolio-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: portfolio-v2
  template:
    metadata:
      labels:
        app: portfolio-v2
    spec:
      containers:
        - name: portfolio-v2
          image: 006262944085.dkr.ecr.eu-west-2.amazonaws.com/v2-ecr:small-14
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
