k8s/app_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: v2-svc
spec:
  selector:
    app: portfolio-v2
  ports:
    - port: 8080
      targetPort: 5000
  type: LoadBalancer
